--- a/Codegym/bai_tu_nghi.html
+++ b/Codegym/bai_tu_nghi.html
@@ -37,10 +37,10 @@
             <th>Khu vực</th>
             <td>
                 <select id="chonkv">
-                    <option value="KV1">KV1</option>
-                    <option value="KV2">KV2</option>
-                    <option value="KV2-NT">KV2-NT</option>
-                    <option value="KV3">KV3</option>
+                    <option value="0.75">KV1</option>
+                    <option value="0.25">KV2</option>
+                    <option value="0.5">KV2-NT</option>
+                    <option value="0">KV3</option>
                 </select>
             </td>
         </tr>
@@ -66,21 +66,9 @@
             let toan = +parseFloat(document.getElementById('toan').value);
             let van = +parseFloat(document.getElementById('van').value);
             let anh = +parseFloat(document.getElementById('anh').value);
-            let chonkv = document.getElementById('chonkv').value;
-            let congdiem = 0;
-            if(chonkv == 'KV1'){
-                congdiem += 0.75
-            }
-            else if(chonkv == 'KV2') {
-                congdiem += 0.25
-            }
-            else if(chonkv == 'KV2-NT') {
-                congdiem += 0.5
-            }
-            else {
-                congdiem = 0
-            }
-            let tongsodiem = toan + van + anh + congdiem
+            let chonkv = +document.getElementById('chonkv').value;
+            
+            let tongsodiem = toan + van + anh + chonkv
             document.getElementById('output2').innerHTML = 'Tổng số điểm Thí sinh đạt khi xét khối D là : ' + tongsodiem
         }
     </script>
