--- a/Codegym/VÒNG LẶP/function.html
+++ b/Codegym/VÒNG LẶP/function.html
@@ -7,13 +7,17 @@
 </head>
 <body>
     <script>
-        for(let i=1;i<=5;i++) {
-            for(let j =1;j<=i;j++){
-                document.write('*')
-            }
-            document.write('<br>')
-        }
-    
+        function giaithua(a) {
+    if (a == 0 || a == 1) {
+        return 1;
+    }
+    let kz = 1;
+    for (let i = 2; i <= a; i++) {
+        kz = kz * i;
+    }
+    return kz;
+}
+alert(giaithua(7))
     </script>
 </body>
 </html>
